--- a/public/scss/bootstrap.scss
+++ b/public/scss/bootstrap.scss
@@ -1,18 +1,18 @@
 /******* Customized Bootstrap ********/
 
-$primary: #06BBCC;
-$light: #F0FBFC;
+$primary: #e65c4f;
+$light: #e9eef2;
 $dark: #181d38;
 
 $font-family-base: 'Heebo', sans-serif;
 
-$headings-font-family: 'Nunito', sans-serif;
+$headings-font-family: 'Nunito Sans', sans-serif;
 
-$body-color: #52565b;
+$body-color: #565360;
 
 $headings-color: $dark;
 
-$headings-font-weight: 700;
+$headings-font-weight: 600;
 
 $display-font-weight: 800;
 
