Ajout des fonctionnalites -Publication des articles -Integration de Fos fos_ckeditor -Integration de fm_elfinder
A suivre:
- Integration de l'index des articles
- Modification et suppression des articles
- Validation des articles

Note: Certaines images au format png ne sont pas gerer par liip_imagine bundle.
Penser a fixer ce bug dans les versions suivantes.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -890,3 +890,11 @@ small {
 .cc-overlay {
 
 }
+
+.form-help-class {
+    color: var(--cc-primary);
+    font-style: italic;
+    font-size: small;
+    font-weight: 600;
+    margin-top: 4px;
+}
