Commit du 20230313_2214 1. Index des articles, activation, suppression, modification et details mis a jour (+ Gestion des droits d'acces - Moderateur, Admin, SuperAdmin)  A suivre  1. Pagination  2. Recherche

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,6 +5,10 @@
     /* Just For Test */
 }
 
+.uppercase-tracking {
+    letter-spacing: 2px;
+}
+
 :root {
     /* Global */
     --cc-lime-green: hsl(163, 72%, 41%);
@@ -75,6 +79,14 @@ body {
 
 .text-blue {
     color: var(--cc-facebook);
+}
+
+.theme-bg {
+    background-color: var(--cc-theme-bg) !important;
+}
+
+.theme-bg-secondary {
+    background-color: var(--cc-theme-text-secondary);
 }
 
 h1, h2, h3 {
