--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -1,20 +1,258 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block title %}Liste des posts{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container-fluid h-75">
+        <header class="header">
+            <div class="heading-area header__heading-area d-flex justify-content-between align-items-center w-100">
+                <h1 class="heading-area__title">Liste des posts</h1>
+                <p class="heading-area__paragraph">
+                    <button class="activate-all btn btn-primary" id="activate-all">Tout activer</button>
+                </p>
+            </div>
+        </header>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        {% for message in app.flashes('admin_home_post') %}
+            <div class="alert alert-primary d-flex align-items-center alert-dismissible" role="alert" style="z-index: 10;">
+                <i class="ri-information-fill fa-2x"></i>{{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Coding City/Documents/coding_city/the_knowledge/src/Controller/PostController.php'|file_link(0) }}">src/Controller/PostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Coding City/Documents/coding_city/the_knowledge/templates/post/index.html.twig'|file_link(0) }}">templates/post/index.html.twig</a></code></li>
-    </ul>
-</div>
+        {% if posts | length == 0 %}
+            <div class="d-flex justify-content-center align-item-center h-100 w-100">
+                <div class="cc-nothing d-flex justify-content-center align-items-center flex-column fs-1 gap-4">
+                    <div class="cc-nothing-icon mb-5">
+                        <span class="material-icons-sharp" style="font-size: 120px">
+                            sentiment_dissatisfied
+                        </span>
+                    </div>
+                    <div class="cc-nothing-text">
+                        Aucun post pour le moment
+                    </div>
+                </div>
+            </div>
+        {% else %}
+            <table class="table table-striped table-hover theme-text table-borderless">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Titre</th>
+                    <th scope="col">publié le</th>
+                    <th scope="col">Activé</th>
+                    <th scope="col">Vidéo</th>
+                    <th scope="col">Auteur</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Modifié le</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for post in posts %}
+                    <tr class="fw-normal align-middle">
+                        <th scope="row">{{ post.id }}</th>
+
+                        <td class="d-flex align-items-center">
+                            {% if post.imageIllustration is defined %}
+                                <img src="{{ asset('images/post/banner/' ~ post.imageIllustration) | imagine_filter('post_thumbnail') }}" alt="
+                            Illustration de  {{ post.title }}" height="" width="120" class="me-3">
+                            {% endif %}
+                            <div>
+                                <p class="mb-0 text-uppercase uppercase-tracking">{{ post.title }}</p>
+                            </div>
+                        </td>
+
+                        <td>
+                            {{ post.createdAt | date("d M Y \\à H:i", "Africa/Douala") }}
+                        </td>
+
+                        <td>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ post.active ?
+                                'checked' : '' }} data-post_id="{{ post.id }}">
+                                <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                            </div>
+                        </td>
+
+                        <td>
+                            {{ post.video is not null ? 'oui' : 'non' }}
+                        </td>
+
+                        <td>
+                            <a href="{{ path('app_user_profile', {id: post.author.id}) }}">
+                                <p class="mb-0">
+                                    {{ post.author.userNaming.username }}
+                                    {#                                <small class="fst-italic text-danger">{{post.author.email}}</small> #}
+                                </p>
+                                <small class="fst-italic text-muted">{{ post.author.userNaming.fullUserName }}</small>
+                            </a>
+                        </td>
+                        <td>{{ post.author.roles[0] }}</td>
+                        <td>{{ post.updatedAt | date("d M Y \\à H:i", "Africa/Douala") }}</td>
+
+                        {#                        <td> #}
+                        {#                            {% if user.aboutUser.bio is defined %} #}
+                        {#                                {{ user.aboutUser.bio | u.truncate(20, '...', false) }} #}
+                        {#                            {% else %} #}
+                        {#                                <span class="small fst-italic fw-bold">Non définie</span> #}
+                        {#                            {% endif %} #}
+                        {#                        </td> #}
+                        <td>
+                            <div class="btn-group dashboard-action-buttons">
+                                <a href="{{ path('post_edit', {'slug': post.slug}) }}" title="Modifier" class="fs-5 p-1 cc-edit text-blue"><i
+                                            class="ri-edit-2-fill"></i></a>
+                                <a href="#" title="Consulter" class="fs-5 p-1 cc-details theme-text" data-post_id="{{ post.id }}"
+                                   data-post_title="{{ post.title }}" data-bs-target="#{{ post.slug }}" data-bs-toggle="modal"><i
+                                            class="ri-information-fill"></i></a>
+                                <a href="#" title="Supprimer" class="fs-5 p-1 cc-delete text-danger" data-post_id="{{ post.id }}"
+                                   data-post_title="{{ post.title }}"><i class="ri-delete-bin-3-fill"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="{{ post.slug }}" tabindex="-1" aria-labelledby="{{ post.title }}" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                            <div class="modal-content theme-bg">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="{{ post.title }}">Aperçu du post</h1>
+                                    <button type="button" class="btn-close theme-bg-secondary" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row py-5">
+                                        <div class="col-md-6 col-sm-12">
+                                            <div class="preview-text px-5">
+                                                <div class="preview-title mb-4">
+                                                    <h4 class="nunito-sans theme-text text-uppercase uppercase-tracking mb-3">{{ post.title }}</h4>
+                                                    <small>Par <strong><em>{{ post.author.userNaming.fullUserName }}</em></strong> </small>
+                                                </div>
+                                                <div class="preview-content mb-5">
+                                                    {{ post.content | u.truncate(500, '...', false) | raw }}
+                                                </div>
+                                                <div class="">
+                                                    le
+                                                    <span class="">{{ post.createdAt | date("d M Y \\à H:i", "Africa/Douala") }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-12">
+                                            <img src="{{ asset('images/post/banner/' ~ post.imageIllustration) | imagine_filter('post_banner') }}"
+                                                 alt="
+                            Illustration de  {{ post.title }}" class="me-3 img-fluid">
+                                        </div>
+                                    </div>
+                                    <div class="d-flex w-100 justify-content-center"></div>
+
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+
+
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        window.addEventListener('load', () => {
+            //Activation de tous les posts en une seule fois
+            document.querySelector('#activate-all').addEventListener('click', function (e) {
+                e.preventDefault();
+                e.stopPropagation();
+                let switchButtons = document.querySelectorAll('input[type=checkbox]');
+                switchButtons.forEach((e, i) => {
+                    if (e.checked) {
+                        let xmlRequest = new XMLHttpRequest();
+                        xmlRequest.open('get', `/admin/post/enable/${e.dataset.post_id}`);
+                        xmlRequest.send();
+                    }
+                })
+                Swal.fire({
+                    title: `<p class="fw-bold fst-italic small text-primary">Vous êtes sur le point d'activer tous les articles à la fois.</p>`,
+                    text: "Vous pourrez les désactiver une par une plutard.",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Tout activer'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        switchButtons.forEach((e, i) => {
+                            e.checked = false;
+                            let xmlRequest = new XMLHttpRequest();
+                            xmlRequest.open('get', `/admin/post/enable/${e.dataset.post_id}`);
+                            xmlRequest.send();
+                            e.checked = true;
+                        })
+                        Swal.fire({
+                            icon: 'info',
+                            title: 'Effectué...',
+                            text: `${switchButtons.length} posts activés avec succès`,
+                        })
+                        // Swal.fire(
+                        //     'Suppression terminée!',
+                        //     `Vous avez retiré l'utilisateur ${this.dataset.post_title}`,
+                        //     'success'
+                        // )
+                    }
+                })
+
+            })
+
+            //Activation et deactivation de verification de profil d'un utilisateur
+            let switchButtons = document.querySelectorAll('input[type=checkbox]');
+            switchButtons.forEach((button, indexButton) => {
+                button.addEventListener('click', function () {
+                    let xmlRequest = new XMLHttpRequest();
+                    console.log(xmlRequest)
+                    xmlRequest.open('get', `/admin/post/enable/${this.dataset.post_id}`);
+                    xmlRequest.onreadystatechange = function () {
+                        if (xmlRequest.readyState === 4 && xmlRequest.status === 200) {
+                            Swal.fire({
+                                icon: 'info',
+                                title: 'Effectué...',
+                                text: xmlRequest.responseText,
+                                footer: '<p class="text-primary">Vous pouvez modifié l\'état de ce post plus tard</p>'
+                            })
+                        }
+                    }
+                    xmlRequest.send();
+                });
+            })
+
+            //Suppression utilisateur avec popup de sweetalert2
+            let deleteButtons = document.querySelectorAll('a.cc-delete');
+            deleteButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    Swal.fire({
+                        title: `Confirmer la suppression de <p class="fw-bold fst-italic small text-primary"> ${this.dataset.post_title} </p>`,
+                        text: "Cette action est irreversible.",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Supprimer'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = `/admin/post/remove/${this.dataset.post_id}`;
+                            // Swal.fire(
+                            //     'Suppression terminée!',
+                            //     `Vous avez retiré l'utilisateur ${this.dataset.post_title}`,
+                            //     'success'
+                            // )
+                        }
+                    })
+
+                });
+            })
+        })
+    </script>
 {% endblock %}
