--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -11,7 +11,7 @@
             </div>
         </header>
 
-        {% for message in app.flashes('admin_home_messages') %}
+        {% for message in app.flashes('admin_home_user') %}
             <div class="alert alert-primary d-flex align-items-center alert-dismissible" role="alert" style="z-index: 10;">
                 <i class="ri-information-fill fa-2x"></i>{{ message }}
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
