--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}The Knowledge{% endblock %} | The Knowledge</title>
+    <title>{% block title %}Coding City{% endblock %} | Coding City</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Author" name="Coding City">
     <meta content="Learning Website" name="Site web a but educatif">
 
     <!-- Favicon -->
-    <link href="{{ asset('img/') }}" rel="icon">
+    {# Favicon link #}
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicon/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ asset('favicon/site.webmanifest') }}">
 
     <!-- Icon Font Stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -52,7 +56,9 @@
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="{{ path('app_home') }}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-        <h2 class="m-0 cc-text-primary"><i class="fa fa-book me-3"></i>The Knowledge</h2>
+        <img src="{{ asset('svg/logo3.svg') }}" alt="logo de Coding City" width="50">
+        <img src="{{ asset('svg/brand.svg') }}" alt="Marque de Coding City" height="40">
+{#        <h2 class="m-0 cc-text-primary">The Knowledge</h2>#}
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -60,17 +66,17 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="{{ path('app_home') }}" class="nav-item nav-link active">Accueil</a>
-            <a href="courses.html" class="nav-item nav-link">Sujets</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                <div class="dropdown-menu fade-down m-0">
-                    <a href="team.html" class="dropdown-item">L'équipe</a>
-                    <a href="testimonial.html" class="dropdown-item">Témoignages</a>
-                    <a href="404.html" class="dropdown-item">404 Page</a>
-                </div>
-            </div>
-            <a href="about.html" class="nav-item nav-link">A propos</a>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="{{ path('blog_home') }}" class="nav-item nav-link">Blog</a>
+            {#            <div class="nav-item dropdown"> #}
+            {#                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a> #}
+            {#                <div class="dropdown-menu fade-down m-0"> #}
+            {#                    <a href="team.html" class="dropdown-item">L'équipe</a> #}
+            {#                    <a href="testimonial.html" class="dropdown-item">Témoignages</a> #}
+            {#                    <a href="404.html" class="dropdown-item">404 Page</a> #}
+            {#                </div> #}
+            {#            </div> #}
+            {#            <a href="about.html" class="nav-item nav-link">A propos</a> #}
+            {#            <a href="contact.html" class="nav-item nav-link">Contact</a> #}
         </div>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <div class="navbar-nav me-5">
@@ -79,14 +85,14 @@
                         {{ app.user.userNaming.firstname ?? app.user.email }}
                         <span>
                         {% if app.user.image.user is defined and app.user.image.image is not null %}
-                            <img src="{{asset('images/user/profile/'~ app.user.image.image) | imagine_filter('profile_image_navbar') }}"
+                            <img src="{{ asset('images/user/profile/'~ app.user.image.image) | imagine_filter('profile_image_navbar') }}"
                                  alt="Image de
                             profil"
                                  width="28"
-                        height="28"
+                                 height="28"
                                  class="rounded-circle">
                         {% else %}
-                            <img src="{{asset('img/team-1.jpg')}}" alt="Image de profil par defaut"
+                            <img src="{{ asset('img/team-1.jpg') }}" alt="Image de profil par defaut"
                                  width="28"
                                  height="28"
                                  class="rounded-circle">
@@ -99,7 +105,7 @@
                         {% endif %}
                         <a href="{{ path('app_user_profile', {'id': app.user.id}) }}" class="dropdown-item"> <span
                                     class="material-icons-sharp">manage_accounts</span> Mon Profil </a>
-{#                        <a href="testimonial.html" class="dropdown-item">Témoignages</a>#}
+                        {#                        <a href="testimonial.html" class="dropdown-item">Témoignages</a> #}
                         <a href="{{ path('app_logout') }}" class="dropdown-item"><span class="material-icons-sharp">logout</span> Déconnexion </a>
                     </div>
                 </div>
